Removing permgen setting